--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body {
 	background-color: orange;
 }
+
+.header {
+	margin: auto;
+	background-color: black;
+	color: white;
+	padding: 20px;
+	width: 50%;
+}
+
+.playButton {
+	margin: auto;
+	width: 50%;
+}
+
+.center {
+	padding: 50px;
+}
+	
+h1 {
+	text-align: center;
+	font-family: fantasy;
+}
